--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.6",
     "axios": "^0.27.2",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
