--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vue/tsconfig": "^0.1.3",
     "typescript": "~4.6.3",
+    "volar-service-vetur": "latest",
     "vite": "^2.9.13",
     "vue-tsc": "^0.34.7"
   }
